--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,13 +1,55 @@
-body {
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  transition: all 0.6s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
+.header{
+    background-color: red;
+    margin: 0; 
+    width: 100%; 
+    padding: 20px; 
+    max-width: 100%;
+}
+
+.headerSubcontainer {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+}
+
+.button {
+  background-color: #1d37ff;
+}
+
+.main {
+  background-color: #dbdbdb;
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+}
+
+.resultsContainer {
+  background-color: white;
+  max-width: 70%;
+}
+
+.resultsTitle {
+  color: #686767;
+  margin: 20px;
+}
+
+.resultsText {
+  background-color: white !important;
+  border: 1px solid #d5d5d5;
+  margin: 15px 0;
+  border-radius: 5px;
 }
